--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,41 @@
-body {
-  background: #605B5B;
+/* ------ BUTTONS-for-DESKTOP-TABLET-and-MOBILE ------*/
+:root {
+    --white-color: #FFFFFF;
+    --fon-lemon-color: #FFFDEE;
+    --black-color: #000000;
+    --accent-yellow-color: #F3C653;
+    --fon-dark-lemon-color: #F0ECD6;
+    --brown-color: #C79002;
+    --footer-color: #0E0C07;
+    --input-text-color: #808080;
+
+    /* Yan Koshel */
+    --primary-text-color: #7A7A7A;
+    --second-text-color: #BABABA;
+    /* Viacheslav */
+    --third-grey-color: #494848;
+
+    /* --accent-yellow-color  and  opacity 0.7*/
+    --svg-fill: rgba(243, 198, 83, 0.7);
+
+    --shadow-on-arrows: rgba(0, 0, 0, 0.65);
+
+    --background-header-color: #D9D9D9;
+    --shadow-header: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    --timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.background {
+  background-image: url(/pexels-kheng-tang-3873951\ 1.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 .btn {
+  width: fit-content;
   display: inline-block;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  color: #F3C653;
+  padding: 14px 35px;
+  color: var(--accent-yellow-color);
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -13,75 +43,79 @@ body {
   line-height: 1.25;
   letter-spacing: 0.02em;
   cursor: pointer;
-  border: 2px solid #FFFFFF;
+  border: 2px solid var(--white-color);
   border-radius: 25px;
-
+  transition: background-color var(--timing-function), color var(--timing-function), border var(--timing-function);
+  
 }
 
 .button-grey {
-  padding-left: 35px;
-  padding-right: 35px;
   background-color: rgba(0, 0, 0, 0.4);
 
 }
 
 .button-black {
-min-width: 236px;
-background-color: #000000;
+background-color: var(--black-color);
 
 }
 
 .btn:hover,
 .btn:active {
-  color: #F3C653;
-  background-color:#FFFFFF;
-  border-color: #F3C653;
+  color: var(--accent-yellow-color);
+  background-color:var(--white-color);
+  border-color: var(--accent-yellow-color);
 }
 
+/* -------- BUTTONS-for-MODALS-of-DESKTOP-and-TABLET ------- */
+
 .btn-big {
+  width: fit-content;
   display: inline-block;
-  padding-top: 17px;
-  padding-bottom: 17px;
-  color: #FFFFFF;
-  background-color: #000000;
+  padding: 18px 38px;
+  color: var(--white-color);
+  background-color: var(--black-color);
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
   line-height: 1.2;
   cursor: pointer;
-  border: 1px solid #F3C653;
+  border: 1px solid var(--accent-yellow-color);
+  transition: background-color var(--timing-function), color var(--timing-function), border var(--timing-function);
 }
 
 .btn-big:hover,
 .btn-big:active {
-  color: #000000;
-  background-color:#F3C653;
+  color: var(--black-color);
+  background-color:var(--accent-yellow-color);
 }
 
 .button-big-black {
-  padding-left: 38px;
-  padding-right: 38px;
   border-radius: 25px;
 }
 
 .button-modal-desk-tab {
-  min-width: 592px;
+  padding-left: 117px;
+  padding-right: 116px;
   border-radius: 2px;
 }
 
+/* -------BUTTONS-for-MOBILE------- */
+
 .btn-mob {
+  width: fit-content;
   display: inline-block;
-  padding: 19px 43px;
-  color: #FFFFFF;
-  background-color: #000000;
+  padding: 20px 43px;
+  color: var(--white-color);
+  background-color: var(--black-color);
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   cursor: pointer;
-  border: 1px solid #F3C653;
+  border: 1px solid var(--accent-yellow-color);
+  transition: background-color var(--timing-function), color var(--timing-function), border var(--timing-function);
   
 }
 
@@ -96,6 +130,6 @@ background-color: #000000;
 
 .btn-mob:hover,
 .btn-mob:active {
-  color: #000000;
-  background-color:#F3C653;
+  color: var(--black-color);
+  background-color: var(--accent-yellow-color);
 }
