--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,170 @@ background-color: var(--black-color);
   color: var(--black-color);
   background-color: var(--accent-yellow-color);
 }
+
+
+
+
+/* MODAL WINDOW */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity var(--timing-function),
+  visibility var(--timing-function);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 414px;
+  min-height: 572px;
+  background-color: #FFFDEE;
+  border: 1px solid #F3C653;
+  border-radius: 2px;
+  padding: 60px 15px;
+}
+
+.mod-close-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color var(--timing-function); 
+}
+ 
+ .mod-close-btn:hover,
+.mod-close-btn:focus,
+.mod-close-btn:active {
+  background-color: #808080;
+} 
+
+.cross-close {
+  transition: fill var(--timing-function);
+
+}
+
+.mod-price-title {
+font-family: 'Times New Roman';
+font-style: normal;
+font-weight: 700;
+font-size: 32px;
+line-height: 1.2;
+color: #000000;
+text-align: center;
+margin-top: 0;
+margin-bottom: 40px;
+}
+
+.mod-two-place-lux {
+  font-family: 'Times New Roman';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 1.2;
+letter-spacing: 0.05em;
+color: #808080;
+margin: 0;
+margin-bottom: 28px;
+
+}
+
+
+
+.mod-item {
+display: block;
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.3;
+color: #C79002;
+margin-top: 8px;
+
+}
+
+.mod-category_of_number {
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.mod-price-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
+.mod-form-input {
+  width: 100%;
+  height: 54px;
+  border: 1px solid #C79002;
+
+  padding: 13px 15px;
+  font-family: 'Times New Roman';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 1.2;
+letter-spacing: 0.05em;
+  background-color: transparent;
+  transition: border var(--timing-function);
+}
+
+.mod-btn-order-number {
+  width: 100%;
+}
+
+.mod-form-input:hover,
+.mod-form-input:focus,
+.mod-form-input:active {
+  outline: none;
+  border-color: #F3C653;
+} 
+
+
+
+@media screen and (min-width: 1024px) {
+  .modal {
+    min-width: 712px;
+    min-height: 489px;
+    padding: 60px 60px;
+  
+}
+
+.mod-price-form {
+  flex-direction: row;
+  gap: 16px;
+}
+
+.mod-form-input {
+  width: 288px;
+}
+     
+  }
+
+
+@media screen and (min-width: 1280px) {
+
+
+
+}
